@@ -34,6 +34,7 @@ export(compare)
 export(confront)
 export(created)
 export(description)
+export(do_by)
 export(errors)
 export(event)
 export(exists_any)
@@ -51,11 +52,15 @@ export(label)
 export(lbj_cells)
 export(lbj_rules)
 export(match_cells)
+export(max_by)
+export(mean_by)
 export(meta)
+export(min_by)
 export(origin)
 export(reset)
 export(run_validation_dir)
 export(run_validation_file)
+export(sum_by)
 export(validate_options)
 export(validator)
 export(values)
