@@ -5,6 +5,9 @@ version 0.9.4
   bounds.
 - New function check_part_whole_relation facilitates checking aggregates
   against details, for data in 'long' format.
+- New helper functions that for split-apply-combine on vectors, with the property
+  that output is always of the same size as the input: 'sum_by', 'min_by', 'max_by'
+  'mean_by' and the general 'do_by'.
 
 
 
